// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Paragraph /> > should render 1`] = `
<p
  data-astro-cid-7zjb5n2t=""
  style="grid-column-start:3;--bodyFontFamily: "IBM Plex Sans", Trebuchet MS;--bodyFontSize: 1.25rem;--bodyFontWeight: 400;--bodyLineHeight: 1.5;"
>
   Test content for the paragraph. 
</p>
`;

exports[`<Paragraph /> > should render without grid 1`] = `
<p
  data-astro-cid-7zjb5n2t=""
  style=";--bodyFontFamily: "IBM Plex Sans", Trebuchet MS;--bodyFontSize: 1.25rem;--bodyFontWeight: 400;--bodyLineHeight: 1.5;"
>
   Test content for the paragraph. 
</p>
`;
